feat : view 및 예외처리 구현